--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,41 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+
+/* media query and max width */
+@media(max-width: 500px){
+    /* body{
+        background-color: red;
+    } */
+    .title-container div{
+        width:100%;
+        /* margin-left: 0%;
+        background-color: aqua; */
+    }
+    nav{
+        width:60%;
+        display:flex;
+        justify-content:space-evenly;
+        margin-top:5%;
+    }
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        width: 90%;
+        /* justify-content: center; */
+        align-items: center;
+    }
+    .bio{
+        line-height: 85%;
+    }
+    .artist{
+        width:80%;
+        align-items: center;
+    }
+    .artist img{
+        width:70%;
+        height: auto;
+    }
+}
+
